--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,35 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "java",
-            "name": "Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
-        {
-            "type": "java",
-            "name": "TreeAlgorithms",
-            "request": "launch",
-            "mainClass": "src.TreeAlgorithms",
-            "projectName": "Hw3_ad5664e8"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "java",
+      "name": "Tree234",
+      "request": "launch",
+      "mainClass": "src.Tree234",
+      "projectName": "Hw3_ad5664e8"
+    },
+    {
+      "type": "java",
+      "name": "Tree23",
+      "request": "launch",
+      "mainClass": "src.Tree23",
+      "projectName": "Hw3_ad5664e8"
+    },
+    {
+      "type": "java",
+      "name": "Current File",
+      "request": "launch",
+      "mainClass": "${file}"
+    },
+    {
+      "type": "java",
+      "name": "TreeAlgorithms",
+      "request": "launch",
+      "mainClass": "src.TreeAlgorithms",
+      "projectName": "Hw3_ad5664e8"
+    }
+  ]
 }
